# b2-hm10

./: README.md  pyproject.toml
django_pr/django_pr/: asgi.py  settings.py  urls.py  wsgi.py
django_pr/task_quote/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
django_pr/task_quote/migrations/: 0001_initial.py
django_pr/task_quote/templates/task_quote/: author.html  author_info.html  base.html  index.html  upload_quotes.html
django_pr/task_users/: apps.py  forms.py  urls.py  views.py
django_pr/task_users/templates/task_users/: login.html  logout.html  register.html
